[package]
name = "rust-rotate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
chrono = "0.4"
#sha2 = "0.10"
#hex-literal = "0.3"
uuid = "1"
mysql = "*"
aws-config = "0.9.0"
aws-sdk-dynamodb = "0.9.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.10"
url = "2.2.2"
aws-types = "0.9.0"
aws-sdk-route53 = "0.9.0"
sha2 = "0.10"
generic-array = "0.14"